# jamrock-desk-app

./: .gitignore  ICON_SETUP_COMPLETE.md  README.md  create-square-icon.ps1  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-tauri.yml
docs/: API_CONTRACTS.md  ARCHITECTURE.md  FRONTEND_ANALYSIS.md
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  config.rs  export.rs  mod.rs  system.rs  updater.rs  window.rs
src/composables/: useKeyboardShortcuts.ts  useWindowState.ts
src/layouts/: AdminLayout.vue
src/pages/: AbandonedCartsPage.vue  ActivityPage.vue  AdminProfilePage.vue  BulkPromotionsPage.vue  CategoriesPage.vue  CouponsPage.vue  CreateCustomerPage.vue  CustomerProfilePage.vue  CustomersPage.vue  DashboardPage.vue  LoginPage.vue  NewSalePage.vue  OffersPage.vue  OrderDetailPage.vue  OrdersPage.vue  PrintOrderPage.vue  ProductFormPage.vue  ProductListPage.vue  ReviewsPage.vue  ScheduledDiscountsPage.vue  SettingsPage.vue  StatsPage.vue  StoreSettingsPage.vue
src/router/: guards.ts  index.ts
src/services/: abandonedCarts.ts  activity.ts  apiClient.ts  auth.ts  bulkPromotions.ts  coupons.ts  customers.ts  export.ts  nativeNotifications.ts  offers.ts  orders.ts  payments.ts  products.ts  scheduledDiscounts.ts  secureStore.ts  siteConfig.ts  statistics.ts  updater.ts
src/stores/: auth.store.ts  dashboard.ts  orders.ts  (+1 more)
(+22 files in other folders)
