[package]
name = "jamrock-admin"
version = "0.6.0"
description = "Jamrock GrowShop Admin Desktop App"
authors = ["Jamrock"]
edition = "2021"
license = "Proprietary"
repository = "https://github.com/jamrockgrowshop/admin-app"
homepage = "https://jamrockgrowshop.com.ar"
rust-version = "1.70"

[lib]
name = "jamrock_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
incremental = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
